--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <body>
         <nav>
             <div class="container nav__container">
-                <a href="home.html"><h2>KKU</h2></a>
+                <a href="home.html"><h2>EDUC</h2></a>
                 <ul class="nav__menu">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="courses.html">Courses</a></li>
